# Atoll

./: .coverage.Damiens-MacBook-Pro-2_local.pid89488.X6K4ONix.HNQIp837rWOh  .gitignore  AGENTS.md  LICENSE  README.md  mkdocs.yml  pyislands_v1_implementation_plan.md  pyproject.toml  pyrightconfig.json  scaffold-guard.toml
.codex/rules/: git.rules  validation.rules
.github/workflows/: ci.yml  corpus-compatibility.yml  corpus-performance.yml  docs.yml  native-optimizer-benchmark.yml  pydantic-graph-benchmark.yml  source-optimization-benchmark.yml
benchmarks/async_execution_plan/: README.md
benchmarks/corpus/: README.md  calibration.toml  manifest.toml
benchmarks/native_optimization/: README.md
benchmarks/pydantic_graph/: README.md  baseline.json  ceiling_semantics.py.in  compiler_probe.sh.in  workload.py.in
benchmarks/source_optimization/: README.md
docs/: benchmarks.md  index.md
examples/: hello.py
scripts/: __init__.py  async_execution_plan_feasibility.py  pydantic_graph_ceiling.py  run_cython_batch_benchmark.py  run_native_optimizer_benchmark.py  run_pydantic_graph_benchmark.py  run_pydantic_graph_ceiling_experiment.py  run_residual_async_profile_benchmark.py
scripts/benchmark_corpus/: __init__.py  __main__.py  aggregation.py  calibration.py  cli.py  history.py  identity.py  lifecycle.py  manifest.py  models.py  policy.py  process.py  results.py  security.py
src/atoll/: __init__.py  __main__.py  baseline_cache.py  cache.py  cli.py  config.py  core.py  models.py  optimization_policy.py  profile_plan_cache.py  project.py  region_cache.py  report.py  source_snapshot.py  wheel_overlay.py
tests/fixtures/: corpus_backend.py  corpus_oracle.py
tests/fixtures/async_execution_plan_project/: .gitignore  pyproject.toml
tests/fixtures/async_execution_plan_project/.atoll/: compile-report.json  compile-report.md
tests/fixtures/async_execution_plan_project/benchmarks/: run_workload.py
tests/fixtures/async_execution_plan_project/src/execution_plan_fixture/: __init__.py  workflow.py
tests/fixtures/async_execution_plan_project/tests/: test_workflow.py
tests/fixtures/native_optimization_project/: pyproject.toml
tests/fixtures/native_optimization_project/benchmarks/: run_buffer_hard.py  run_call_chain_hard.py  run_native_workload.py  run_scalar_hard.py
tests/fixtures/native_optimization_project/src/native_optimization_fixture/: __init__.py  kernels.py
tests/fixtures/native_optimization_project/tests/: test_kernels.py
tests/fixtures/residual_async_profile/: pyproject.toml
tests/fixtures/residual_async_profile/src/residual_async_profile/: __init__.py  profile.py
tests/fixtures/residual_async_profile/tests/: test_profile.py
tests/fixtures/simple_project/: pyproject.toml
tests/fixtures/simple_project/src/app/: __init__.py  ranking.py  types.py
tests/fixtures/simple_project/src/app/data/: schema.json
tests/fixtures/simple_project/tests/: test_ranking.py
tests/fixtures/source_optimization_project/: pyproject.toml
tests/fixtures/source_optimization_project/benchmarks/: __init__.py  run_workload.py
tests/fixtures/source_optimization_project/src/source_optimization_fixture/: __init__.py  anyio_workflow.py  workflow.py
tests/fixtures/source_optimization_project/tests/: __init__.py  test_workflow.py
tests/integration/: test_async_region_package.py  test_backend_compile.py  test_benchmark_corpus_lifecycle.py  test_package_cli.py  (+10 more)
(+256 files in other folders)
