[project]
name = "async-execution-plan-project"
version = "0.1.0"
description = "Generic async execution-plan acceptance fixture."
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=69", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.atoll.compile]
test_command = ["python", "-m", "pytest", "tests", "-q"]
benchmark_command = ["python", "benchmarks/run_workload.py", "--minimum-seconds", "0.25"]

[tool.pytest.ini_options]
pythonpath = ["src"]
